Bug 1022956 - When fling velocity is high, don't let tap gestures trigger clicks to content. r=drs r=Bas